--- a/QuantumTechnicianApp/Src/ScopeScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ScopeScreen.fx.yaml
@@ -534,7 +534,7 @@ ScopeScreen As screen:
                         Tooltip: =Parent.DisplayName
                         Width: =Parent.Width - 60
                         X: =30
-                        Y: =lblScopeofwork.Y + lblScopeofwork.Height + 5
+                        Y: =lblScopeofwork.Y + lblScopeofwork.Height
                         ZIndex: =2
 
                     ErrorMessageScopeofwork As label:
@@ -581,19 +581,6 @@ ScopeScreen As screen:
                     Y: =2
                     ZIndex: =1
 
-                    lblManuallyScopeofwork As label:
-                        AutoHeight: =true
-                        Color: =RGBA(0, 0, 0, 1)
-                        Font: =Font.Arial
-                        Height: =If(VarCustomScopeofwork,48,0)
-                        Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
-                        Text: ="Custom Scope of work(Manually Entered)"
-                        Visible: =VarCustomScopeofwork
-                        Width: =Parent.Width - 60
-                        X: =30
-                        Y: =10
-                        ZIndex: =1
-
                     IntxtManuallyScopeofwork As text:
                         BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
                         Default: =Parent.Default
@@ -608,6 +595,7 @@ ScopeScreen As screen:
                         Mode: =TextMode.MultiLine
                         OnChange: =Set(VarCustomScopeofwork,true)
                         PaddingLeft: =5
+                        PaddingTop: =20
                         RadiusBottomLeft: =0
                         RadiusBottomRight: =0
                         RadiusTopLeft: =0
@@ -616,8 +604,8 @@ ScopeScreen As screen:
                         Tooltip: =Parent.DisplayName
                         Width: =Parent.Width - 60
                         X: =30
-                        Y: =lblManuallyScopeofwork.Y + lblManuallyScopeofwork.Height + 5
-                        ZIndex: =2
+                        Y: =lblManuallyScopeofwork.Y + lblManuallyScopeofwork.Height/2
+                        ZIndex: =1
 
                     ErrorMessageManuallyScopeofwork As label:
                         AutoHeight: =true
@@ -633,7 +621,7 @@ ScopeScreen As screen:
                         Width: =Parent.Width - 60
                         X: =30
                         Y: =IntxtManuallyScopeofwork.Y + IntxtManuallyScopeofwork.Height
-                        ZIndex: =3
+                        ZIndex: =2
 
                     StarVisibleManuallyScopeofwork As label:
                         Align: =Align.Center
@@ -644,6 +632,20 @@ ScopeScreen As screen:
                         Width: =30
                         Wrap: =false
                         Y: =lblManuallyScopeofwork.Y
+                        ZIndex: =3
+
+                    lblManuallyScopeofwork As label:
+                        AutoHeight: =true
+                        Color: =RGBA(0, 0, 0, 1)
+                        Fill: =RGBA(255, 255, 255, 1)
+                        Font: =Font.Arial
+                        Height: =If(VarCustomScopeofwork,48,0)
+                        Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
+                        Text: ="Custom Scope of work(Manually Entered)"
+                        Visible: =VarCustomScopeofwork
+                        Width: =Parent.Width - 50
+                        X: =28
+                        Y: =10
                         ZIndex: =4
 
             ctnButtonSS As groupContainer.verticalAutoLayoutContainer:
