--- a/QuantumQQTeamApp/CanvasManifest.json
+++ b/QuantumQQTeamApp/CanvasManifest.json
@@ -13,7 +13,6 @@
       "allowmultiplescreensincanvaspages": false,
       "appinsightserrortracing": false,
       "appinstrumentationcorrelationtracing": false,
-      "asyncnodedelegation": true,
       "autocreateenvironmentvariables": false,
       "backfromhostaction": false,
       "behaviorpropertyui": false,
@@ -63,7 +62,6 @@
       "herocontrols": false,
       "improvedmediacapture": false,
       "improvedtabstopbehavior": false,
-      "impurenodedelegation": true,
       "isemptyrequirestableargument": true,
       "keeprecentscreensloaded": false,
       "longlivingcache": false,
@@ -133,6 +131,7 @@
     "SplashScreen",
     "DashboardScreen",
     "LeadListScreen",
-    "LeadScreen"
+    "LeadScreen",
+    "Screen1"
   ]
 }
