--- a/QuantumQQTeamApp/Src/Screen1.fx.yaml
+++ b/QuantumQQTeamApp/Src/Screen1.fx.yaml
@@ -35,3 +35,10 @@ Screen1 As screen:
         Y: =176
         ZIndex: =1
 
+    Button3 As button:
+        OnSelect: =Set(i,59)
+        Text: ="Button"
+        X: =60
+        Y: =60
+        ZIndex: =2
+
